Fixed broken tests as a result of ethnicities/patient event types dropdown changes

--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -33,7 +33,7 @@
           = f.label :notes, "Notes"
           = f.text_area(:notes, :cols => 50, :rows => 6)
         %li
-          = submit_tag "Save Event", class: "button tiny right"
+          = submit_tag "Save Patient Event", class: "button tiny right"
 
 = content_for :secondary_nav do
   %li
