--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -26,7 +26,7 @@
         %dd= "#{@patient.sex}"
 
         %dt Ethnicity:
-        %dd= "#{@patient.ethnic_category}"
+        %dd= "#{@patient.ethnicity.name}"
 
         %dt Date of Birth:
         %dd= "#{@patient.dob}"
