--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,9 +26,12 @@
               %li
                 = link_to "Add a New Patient", new_patient_path
     
-    .row
-      = flash[:notice]
-    
+    - if flash[:notice]
+      .row
+        .alert-box.info.round{:data => {:alert => nil}}
+          = flash[:notice]
+          <a href="#" class="close">&times;</a>
+      
     .row
       .large-12.columns
         = yield
