--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -20,7 +20,7 @@
 
           %li
             = f.label :patient_event_type_id, "Patient Event Type"
-            = f.select(:patient_event_type_id, PatientEventType.all.collect { |p| [p.name, p.id] })
+            = f.collection_select(:patient_event_type_id, PatientEventType.all, :id, :name )
 
           %li 
             =link_to "Add a New Event Type", new_patient_event_type_path, class: "button tiny"      
