--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -28,7 +28,7 @@
         %ul.no-bullet
           %li
             = patient.label :sex, "Sex"
-            = patient.select(:sex, options_for_select([["Unknown", "0"], ["Male", "1"], ["Female", "2"], ["Not Specified", "9"]]))
+            = patient.select(:sex, gender_options)
 
           %li
             = patient.label :ethnicity_id, "Ethnicity"
