--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,16 @@
             %ul.dropdown
               %li
                 = link_to "Add a New Patient", new_patient_path
+
+      %section.top-bar-section
+        %ul.right
+          %li.has-dropdown
+            = link_to "Admin", patients_path
+            %ul.dropdown
+              %li
+                = link_to "Edit Patient Event Types", patient_event_types_path
+              %li
+                = link_to "Edit Drugs List", "#"
     
     - if flash[:notice]
       .row
