Created add a drug feature to a list of drugs

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
               %li
                 = link_to "Edit Patient Event Types", patient_event_types_path
               %li
-                = link_to "Edit Drugs List", "#"
+                = link_to "Edit Drugs List", drugs_path
     
     - if flash[:notice]
       .row
