Changed wording of link

--- a/app/views/patient_event_types/index.html.haml
+++ b/app/views/patient_event_types/index.html.haml
@@ -12,4 +12,4 @@
 
 = content_for :secondary_nav do
   %li
-    = link_to "Return to New Patient Event", new_patient_event_path
+    = link_to "Add a New Patient Event", new_patient_event_path
