--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,11 @@
             = link_to "Admin", patients_path
             %ul.dropdown
               %li
+                = link_to "Add New Patient Event Type", new_patient_event_type_path
+              %li
                 = link_to "Edit Patient Event Types", patient_event_types_path
+              %li
+                = link_to "Add New Drug", new_drug_path  
               %li
                 = link_to "Edit Drugs List", drugs_path
     
