Making patient index a responsive table

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,10 @@
  *
  *= require_self
  *= require foundation_and_overrides
+ *= require globals
  *= require patients
  *= require patient_events
+ *= require tables
  *= require errors
 
  */
