--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -1,8 +1,21 @@
 .row
   %h1 Renal Patients
 
-.row
-  = render @patients
+  %table.responsive
+    %caption Renal Patients
+    %thead
+      %tr
+        %th
+          Forename
+        %th
+          Surname
+        %th
+          NHS Number
+        %th.g-center{ :colspan => 2 }
+          Actions
+
+    %tbody
+      = render @patients
 
 = content_for :secondary_nav do
   %li
