--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -1,15 +1,28 @@
 .row
   %h1 Patient Events
 
-.row
-  %ul.no-bullet
-    - @patient_events.each do |p|
-      = field_set_tag do
-        %li= "Event Date/Time: #{p.date_time}"
-        %li= "Entered by: #{p.user_id}"
-        %li= "Event Type: #{p.patient_event_type.name}"
-        %li= "Description: #{p.description}"
-        %li= "Notes: #{p.notes}"
+  %table.responsive
+    %caption
+      = link_to "All Patient Events", patient_events_path
+
+    %thead
+      %th
+        Added
+      %th
+        Event Type
+      %th
+        User
+      %th
+        Modal
+      %th
+        Description
+      %th
+        Time
+      %th
+        Staff Name
+
+    %tbody
+      = render @patient_events
 
 = content_for :secondary_nav do
   %li
