--- a/app/views/patient_event_types/_form.html.haml
+++ b/app/views/patient_event_types/_form.html.haml
@@ -1,4 +1,6 @@
-%li
-  = f.label :name, "New Patient Event Type"
-  = f.text_field :name
+%legend
+  Patient Event Type
+
+= f.label :name
+= f.text_field :name
 
