--- a/app/views/patient_event_types/edit.html.haml
+++ b/app/views/patient_event_types/edit.html.haml
@@ -5,12 +5,12 @@
 .large-6.columns
 
   = form_for @patient_event_type, :method => :put do |f|
-    %ul.no-bullet
-      = render partial: "patient_event_types/form", locals: { f: f }   
+    %fieldset
+      = render partial: "patient_event_types/form", locals: { f: f }
 
       = submit_tag "Update Patient Event Type", class: "button tiny right"
 
 
 = content_for :secondary_nav do
-  %li
-    = link_to "Cancel", patient_event_types_path  
+  %dd
+    = link_to "Patient Event Types", patient_event_types_path
