--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -38,4 +38,4 @@
 
 = content_for :secondary_nav do
   %dd
-    = link_to "Back to patient list", patients_path
+    = link_to "Patient list", patients_path
