--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -38,7 +38,7 @@
 .row
   = content_for :secondary_nav do
     %dd
-      = link_to "Back to Patient List", patients_path
+      = link_to "Patient list", patients_path
     %dd
       = link_to "Patient Demographics", demographics_patient_path(@patient)
 
