--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -26,4 +26,4 @@
 
 = content_for :secondary_nav do
   %dd
-    = link_to "Back to patient list", patients_path
+    = link_to "Patient list", patients_path
