--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -64,7 +64,7 @@
 
 = content_for :secondary_nav do
   %dd
-    = link_to "Back to patient list", patients_path
+    = link_to "Patient list", patients_path
   %dd
     = link_to "Edit Demographics", edit_patient_path(@patient)
   %dd
