--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -12,4 +12,6 @@
 
 = content_for :secondary_nav do
   %dd
-    = link_to "Back to patient list", patients_path
+    = link_to "Patient list", patients_path
+  %dd
+    = link_to "Patient Demographics", demographics_patient_path(@patient)
