--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -1,5 +1,5 @@
 .row
-  %h1= "Clinical Summary for #{@patient.full_name}"
+  %h5= "Clinical Summary for #{@patient.full_name} - KCH: #{@patient.local_patient_id}, Sex: #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, Modal: "
 
   .columns.large-12.small-12
     %table.responsive
