--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -31,33 +31,9 @@
 .columns.large-12.small-12
   %table.responsive
     %caption
-      = link_to "All Patient Medication ", "#"
+      = link_to "All Current Medications", medications_index_patient_path
 
-    %thead
-      %th
-        Medication
-      %th
-        Dose
-      %th
-        Route
-      %th
-        Frequency
-      %th
-        Prescribed On
-
-    %tbody
-      - @patient_medications.each do |p|
-        %tr
-          %td{:data => { :heading => "Medication" }}
-            = p.medication.name
-          %td{:data => { :heading => "Dose"}}
-            = p.dose
-          %td{:data => { :heading => "Route"}}
-            = p.route
-          %td{:data => { :heading => "Frequency"}}
-            = p.frequency
-          %td{:data => { :heading => "Prescribed On"}}
-            = p.date
+      = render partial: "patients/medications", locals: { model: @patient_medications }
           
 .row
   = content_for :secondary_nav do
