Created forms for adding medication for a patient which switch between standard drugs/Esa/Immunosuppressant

--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -31,3 +31,12 @@ select.dob {
 .patient-list {
   border-bottom: 1px solid #DDDDDD;
 }
+
+ul.provider {
+  display: inline-block;
+  padding-right: 2em;
+}
+
+.provider>li {
+  display: inline-block;
+}
