--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -22,8 +22,8 @@
       = pm.label :dose
       = pm.text_field :dose
 
-      = pm.label :route, "Route (PO/IV/SC/IM)"
-      = pm.text_field :route
+      = pm.label :route, "Route"
+      = pm.select :route, route_options
 
       = pm.label :frequency, "Frequency & Duration"
       = pm.text_field :frequency
@@ -32,7 +32,7 @@
       = pm.text_area :notes, :cols => 50, :rows => 6
 
       = pm.label :date, "Prescribed On"
-      = pm.date_select(:date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "date")
+      = pm.date_select(:date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
       = pm.label :provider
 
