--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -7,9 +7,9 @@ nav.sub-nav-container {
     padding: 10px 10px 10px 0;
     margin: -0.25rem 0 0 1rem;
 
-    dt, dd {
-      margin: 0;
-      line-height: 21px;
-    }
+    // dt, dd {
+    //   margin: 0;
+    //   line-height: 21px;
+    // }
   }
 }
