--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -2,26 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-dl {
-  width:300px;
-  float:left;
-  margin-right:2em;
-  font-weight: normal;
-}
+// dl {
+//   width:300px;
+//   float:left;
+//   margin-right:2em;
+//   font-weight: normal;
+// }
   
-dt {
-  font-size:0.8em;
-  margin-bottom:0.7em;
-}
+// dt {
+//   font-size:0.8em;
+//   margin-bottom:0.7em;
+// }
   
-dd {
-  color:#444;
-  font-size:0.8em;
-  margin:0 0 2em 0;
-  padding-left:4.5em;
-  line-height:1.5em;
-  background:none no-repeat left top; 
-}
+// dd {
+//   color:#444;
+//   font-size:0.8em;
+//   margin:0 0 2em 0;
+//   padding-left:4.5em;
+//   line-height:1.5em;
+//   background:none no-repeat left top; 
+// }
 
 select.dob {
   display: inline-block;
