--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -7,44 +7,49 @@
     - if pm.object.new_record?
       %h5 Add a new medication
 
-    .med-form
+    %dl.accordion{data: {accordion: true} }
+      %dd.accordion-navigation.med-form
+        %a{href: "#edit-meds-#{pm.object.id}"}        
+          = pm.collection_select :medication_id, Drug.where(:type => pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+      
+        .med-form.content{:id => "edit-meds-#{pm.object.id}"}
 
-      = pm.hidden_field :id
+          = pm.hidden_field :id
 
-      = pm.hidden_field :patient_id
+          = pm.hidden_field :patient_id
 
-      = pm.label :medication_type, "Medication Type"
-      = pm.select :medication_type, options_for_select([["Standard Drug", nil], ["ESA", "Esa"], ["Immunosuppressant", "Immunosuppressant"]], pm.object.medication_type), {}, :class => "medication-type-select"
+          = pm.label :medication_type, "Medication Type"
+          = pm.select :medication_type, options_for_select([["Standard Drug", nil], ["ESA", "Esa"], ["Immunosuppressant", "Immunosuppressant"]], pm.object.medication_type), {}, :class => "medication-type-select"
 
-      = pm.label :medication_id, "Select Drug"
-      = pm.collection_select :medication_id, Drug.where(:type => pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+          = pm.label :medication_id, "Select Drug"
+          = pm.collection_select :medication_id, Drug.where(:type => pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
-      = pm.label :dose
-      = pm.text_field :dose
+          = pm.label :dose
+          = pm.text_field :dose
 
-      = pm.label :route, "Route"
-      = pm.select :route, route_options
+          = pm.label :route, "Route"
+          = pm.select :route, route_options
 
-      = pm.label :frequency, "Frequency & Duration"
-      = pm.text_field :frequency
+          = pm.label :frequency, "Frequency & Duration"
+          = pm.text_field :frequency
 
-      = pm.label :notes
-      = pm.text_area :notes, :cols => 50, :rows => 6
+          = pm.label :notes
+          = pm.text_area :notes, :cols => 50, :rows => 6
 
-      = pm.label :date, "Prescribed On"
-      = pm.date_select(:date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
+          = pm.label :date, "Prescribed On"
+          = pm.date_select(:date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
-      = pm.label :provider
+          = pm.label :provider
 
-      - PatientMedication.providers.keys.map do |p|
-        %ul.no-bullet.provider
+          - PatientMedication.providers.keys.map do |p|
+            %ul.no-bullet.provider
 
-          %li
-            = pm.radio_button :provider, p, :class => "provider-#{p}"
-          %li
-            = pm.label :provider, I18n.t("enums.provider.#{p}")
+              %li
+                = pm.radio_button :provider, p, :class => "provider-#{p}"
+              %li
+                = pm.label :provider, I18n.t("enums.provider.#{p}")
 
-      = pm.check_box :_destroy
-      = pm.label :_destroy, "Terminate?"
+          = pm.check_box :_destroy
+          = pm.label :_destroy, "Terminate?"
 
   = f.submit "Save Medication", :class => "button tiny right"
