Fixed missing medication type 'Drug'

--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -10,7 +10,7 @@
     %dl.accordion{data: {accordion: true} }
       %dd.accordion-navigation.med-form
         %a{href: "#edit-meds-#{pm.object.id}"}        
-          = pm.collection_select :medication_id, Drug.where(:type => pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+          = pm.label :medication_id, Drug.where(:name => pm.object.medication_id), :class => "drug-select"
       
         .med-form.content{:id => "edit-meds-#{pm.object.id}"}
 
@@ -19,10 +19,10 @@
           = pm.hidden_field :patient_id
 
           = pm.label :medication_type, "Medication Type"
-          = pm.select :medication_type, options_for_select([["Standard Drug", nil], ["ESA", "Esa"], ["Immunosuppressant", "Immunosuppressant"]], pm.object.medication_type), {}, :class => "medication-type-select"
+          = pm.select :medication_type, drug_select_options(pm.object.medication_type), {}, :class => "medication-type-select"
 
           = pm.label :medication_id, "Select Drug"
-          = pm.collection_select :medication_id, Drug.where(:type => pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+          = pm.collection_select :medication_id, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
           = pm.label :dose
           = pm.text_field :dose
