Edited/added missing links

--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -43,7 +43,7 @@
     %dd
       = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_event_path
     %dd
-      = link_to "Add a Medication #{@patient.full_name}", medications_patient_path(@patient)
+      = link_to "Edit Medications #{@patient.full_name}", medications_patient_path(@patient)
 
 
 
