--- a/app/views/patients/medications_index.html.haml
+++ b/app/views/patients/medications_index.html.haml
@@ -13,4 +13,5 @@
 
     %dd
       = link_to "Clinical Summary for #{@patient.full_name}", clinical_summary_patient_path(@patient.id)
-   
+    %dd
+      = link_to "Edit Medications #{@patient.full_name}", medications_patient_path(@patient)
