--- a/app/assets/stylesheets/foundation/navigation.css.scss
+++ b/app/assets/stylesheets/foundation/navigation.css.scss
@@ -7,9 +7,8 @@ nav.sub-nav-container {
     padding: 10px 10px 10px 0;
     margin: -0.25rem 0 0 1rem;
 
-    // dt, dd {
-    //   margin: 0;
-    //   line-height: 21px;
-    // }
+    dt, dd {
+      margin-bottom: 0;
+    }
   }
 }
