--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -1,5 +1,5 @@
 #new-form:target {
-  .g-hidden {
+  .hide {
     display: block;
   }
 
@@ -10,7 +10,6 @@
   .toggle {
     display: none;
   }
-
 }
 
 .close-new-form {
