--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -7,10 +7,10 @@
 
     - if pm.object.new_record?
       #new-form
-        %a.button.tiny.toggle{href: '#new-form'}
+        %a.button.tiny.toggle.left.mt{href: '#new-form'}
           Add a new medication
 
-        .g-hidden
+        .hide
           %a.button.tiny.close-new-form{href: '#'}
             Close
 
@@ -38,11 +38,11 @@
 
           = render :partial => 'patient_medication_fields', :locals => { :pm => pm }
 
-  = f.submit "Save Medication", :class => "button tiny right"
+  = f.submit "Save Medication", :class => "button tiny right mt"
 
 .row
   = content_for :secondary_nav do
-  
+
     %dd
       = link_to "Clinical Summary for #{@patient.full_name}", clinical_summary_patient_path(@patient.id)
-  
+
