--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -3,7 +3,7 @@
 
   %table.responsive
     %caption
-      = link_to "All Patient Events", patient_events_path
+      = link_to "All Patient Events", patient_patient_events_path(@patient)
 
     %thead
       %th
@@ -19,7 +19,7 @@
       %th
         Time
       %th
-        Staff Name
+        Entered By
 
     %tbody
       = render @patient_events
