--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -4,7 +4,7 @@
   .columns.large-12.small-12
     %table.responsive
       %caption
-        = link_to "All Patient Events", patient_events_path
+        = link_to "All Patient Events", patient_patient_events_path(@patient)
 
       %thead
         %th
@@ -41,7 +41,7 @@
     %dd
       = link_to "Back to Patient List", patients_path
     %dd
-      = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_event_path
+      = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_patient_event_path(@patient)
     %dd
       = link_to "Edit Medications #{@patient.full_name}", medications_patient_path(@patient)
 
